--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "semester-project-2",
   "version": "1.0.0",
+  "type": "module",
   "description": "Auction website for semester project 2 (Noroff).",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sass src/scss:dist/css",
-    "watch": "sass --watch src/scss:dist/css & live-server",
-    "start": "npm run build && live-server",
+    "watch": "sass --watch src/scss:dist/css & vite",
+    "start": "npm run build && vite",
     "dev": "npm-run-all --parallel watch start"
   },
   "keywords": [
@@ -21,12 +22,12 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-    "dotenv": "^16.4.5"
+    "bootstrap-icons": "^1.11.3"
   },
   "devDependencies": {
-    "live-server": "^1.2.2",
+    "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "vite": "^5.2.8"
   }
 }
