--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "Auction website for semester project 2 (Noroff).",
   "main": "index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sass src/scss:dist/css",
+    "build:css": "sass src/scss:dist/css",
+    "build:js": "vite build",
+    "build": "npm run build:css && npm run build:js",
     "watch": "sass --watch src/scss:dist/css & vite",
     "start": "npm run build && vite",
     "dev": "npm-run-all --parallel watch start"
