Added description in readme

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "SCSS",
     "SASS"
   ],
-  "author": "",
+  "author": "aBadMan91",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
